# MethanoHunt

./: .gitignore  README.md  environment.yaml  example_output.html  methanohunt.py  methanohunt.yaml  methanohunt_db.tsv  pyproject.toml
methanohunt/: annotate.py  cli.py  gene.py  genome.py  profile.py  taxonomy.py
methanohunt/database/: database_references.xlsx  methanohunt_gene_db.tsv  methanohunt_taxonomy_db.tsv
methanohunt/database/McrA/: McrA_C-PF02249.hmm  McrA_N-PF02745.hmm  McrA_refs_classification.tsv.0  McrA_refs_methanohunt.faa.0  McrA_refs_methanohunt.faa.linsi  McrA_refs_methanohunt.faa.phylip  McrA_refs_methanohunt.faa.treefile  McrA_refs_methanohunt.xlsx  mcrA.raxml.bestModel  mcrA.raxml.bestModel.0  mcrA_refs_classification.tsv  mcrA_refs_methanohunt.faa  mcrA_refs_methanohunt.faa.linsi  mcrA_refs_methanohunt.faa.phylip
methanohunt/database/MmoX/: MmoX-PF02332.hmm  MmoX.raxml.bestModel  MmoX_refs_classification.tsv  MmoX_refs_methanohunt.faa  MmoX_refs_methanohunt.faa.linsi  MmoX_refs_methanohunt.faa.phylip  MmoX_refs_methanohunt.faa.treefile  MmoX_refs_methanohunt.xlsx
methanohunt/database/PmoA/: PmoA.raxml.bestModel  PmoAAmoA-PF02461.hmm  PmoA_refs_classification.tsv  PmoA_refs_methanohunt.faa  PmoA_refs_methanohunt.faa.linsi  PmoA_refs_methanohunt.faa.phylip  PmoA_refs_methanohunt.faa.treefile  PmoA_refs_methanohunt.xlsx
methanohunt/database/kofamdb_reduced/: methane.hal  methanohunt_ko_list.tsv
methanohunt/workflow/: Snakefile  genome.smk
methanohunt/workflow/rules/: bwa.smk  classify.smk  epa_ng.smk  extract.smk  hmm.smk  hmm_mcrA.smk  hmm_mmoX.smk  hmm_pmoA.smk  minimap.smk  placement.smk  pplacer.smk  quant.smk  tree.smk  vis.smk
methanohunt/workflow/scripts/: aggregate_genome_features.py  aggregate_rpkg.py  calculate_rpkg_single.py  calculate_tpm.py  classify_genes.py  extract_dna.py  extract_hits.py  extract_sequences.py  find_Methano_in_GTDB.py  gene_presence_absence.py  kofamscan_filter.py  methano_taxonomy_output.txt  visualize.py
methanohunt_test/: groups.txt  sample1.tax.tsv  sample2.tax.tsv  sample3.tax.tsv  sample4.tax.tsv
(+61 files in other folders)
