[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methanohunt"
version = "0.1.0"
description = "Summarize relative abundance of methane cyclers from taxonomic profiling or functional gene data."
readme = "README.md"
authors = [
  { name="Heyu Lin", email="heyu.lin@qut.edu.au" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "natsort",
    "plotly",
    "click",
    "snakemake>=9.0", 
    "pulp<2.8" # snakemake often has specific pulp requirements or pulp conflicts, good safely. But standard snakemake usually installable.
]
requires-python = ">=3.8"

[project.scripts]
methanohunt = "methanohunt.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
]
