[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methanohunt"
version = "0.1.0"
description = "Summarize relative abundance of methane cyclers from taxonomic profiling or functional gene data."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name="Heyu Lin", email="heyu.lin@qut.edu.au" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas",
    "natsort",
    "plotly",
    "click",
    "snakemake>=9.0",
    "MicrobeCensus-SourceApp"
]

[project.urls]
homepage = "https://github.com/SilentGene/MethanoHunt"

[project.scripts]
methanohunt = "methanohunt.cli:cli"

[tool.hatch.build]
packages = ["methanohunt"]

[tool.hatch.build.targets.wheel]
packages = ["methanohunt"]

[tool.hatch.build.targets.sdist]
include = ["methanohunt", "LICENSE", "README.md"]
